committing some old uncommitted stuff...

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/Stratego/nbproject/private/
+/RubiksCube/nbproject/private/
+/RubiksCube/build/
+/RicochetRobots/nbproject/private/
+/RicochetRobots/build/
+/RicochetRobots/dist/
