rough spring setup, still not working

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,9 @@
         <module>server</module>
         <module>engine</module>
         <module>bot</module>
-    </modules>
+        <module>api</module>
+    <module>web</module>
+  </modules>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
