--- a/client/pom.xml
+++ b/client/pom.xml
@@ -5,12 +5,43 @@
         <groupId>com.etherblood.chess</groupId>
         <artifactId>chess</artifactId>
         <version>1.0-SNAPSHOT</version>
+        <relativePath>..</relativePath>
     </parent>
     <groupId>com.etherblood.chess</groupId>
     <artifactId>client</artifactId>
-    <packaging>jar</packaging>
+    <packaging>war</packaging>
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+    
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.6</version>
+                <executions> 
+                    <execution> 
+                        <id>package-test-jar</id> 
+                        <goals> 
+                            <goal>test-jar</goal> 
+                        </goals> 
+                    </execution> 
+                    <execution>
+                        <id>package-jar</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                        <configuration>
+                            <classifier>jar</classifier>
+                            <includes>
+                                <include>**/*</include>
+                            </includes>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
