--- a/api/pom.xml
+++ b/api/pom.xml
@@ -6,10 +6,7 @@
         <artifactId>chess</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    <name>api</name>
     <artifactId>api</artifactId>
     <packaging>jar</packaging>
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
 </project>
