--- a/bot/pom.xml
+++ b/bot/pom.xml
@@ -6,12 +6,9 @@
         <artifactId>chess</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    <name>bot</name>
     <artifactId>bot</artifactId>
     <packaging>jar</packaging>
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
     
     <dependencies>
         <dependency>
