--- a/client/pom.xml
+++ b/client/pom.xml
@@ -7,13 +7,9 @@
         <version>1.0-SNAPSHOT</version>
         <relativePath>..</relativePath>
     </parent>
-    <groupId>com.etherblood.chess</groupId>
+    <name>client</name>
     <artifactId>client</artifactId>
     <packaging>war</packaging>
-    <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
-    </properties>
     
     <build>
         <plugins>
