added hacky move history

--- a/chess/server/src/test/resources/test.properties
+++ b/chess/server/src/test/resources/test.properties
@@ -1,2 +1,2 @@
-hibernate.dialect=com.etherblood.chess.server.CustomHsqlDialect
+hibernate.dialect=com.etherblood.chess.server.test.CustomHsqlDialect
 hibernate.showSql=true
